Rename per fork.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "stevebauman/viewer",
+    "name": "capitaladot/viewer",
     "description": "A presenter-like package but used for attaching modular views on a retrieved eloquent record",
     "license" : "MIT",
     "keywords" : [
